--- a/src/components/menu/menu.module.css
+++ b/src/components/menu/menu.module.css
@@ -7,10 +7,10 @@
  z-index: 2;
  overflow: hidden;
  position: absolute;
- height: 61px;
+ height: max-content;
 }
 
-.container a {
+.linkLogo {
  height: max-content;
  width: max-content;
 }
